--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://SuzimaraMoura.github.io/cadastro-de-usuario",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
