--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "cadastro-de-usuario",
+  "homepage": "https://suzimaramoura.github.io/cadastro-de-usuarios/",
+
+  "name": "cadastro-de-usuarios",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  
   "scripts": {
-   
-    
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^1.7.2",
     "cors": "^2.8.5",
-    "gh-pages": "^6.1.1",
     "install": "^0.13.0",
     "props-type": "^1.0.1",
     "react": "^18.3.1",
@@ -27,10 +27,14 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "gh-pages": "^6.1.1",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10",
     "vite": "^5.3.4"
   }
 }
