--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://suzimaramoura.github.io/cadastro-de-usuarios/",
+  "homepage":"https://suzimaramoura.github.io/cadastro-de-usuarios/",
 
   "name": "cadastro-de-usuarios",
   "private": true,
@@ -10,8 +10,8 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d dist"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "axios": "^1.7.2",
